[tool.poetry]
name = "backshell"
version = "0.1.1"
description = ""
authors = ["Sergey M <yamldeveloper@proton.me>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
pysocks = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
backshell = "backshell:main"
